; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_epub-doc.c_find_metadata.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/html/extr_epub-doc.c_find_metadata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32*, i8*)* @find_metadata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @find_metadata(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i32 @fz_xml_find_down(i32* %9, i8* %10)
  %12 = call i32 @fz_xml_down(i32 %11)
  %13 = call i8* @fz_xml_text(i32 %12)
  store i8* %13, i8** %8, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = call i8* @fz_strdup(i32* %17, i8* %18)
  store i8* %19, i8** %4, align 8
  br label %21

20:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %21

21:                                               ; preds = %20, %16
  %22 = load i8*, i8** %4, align 8
  ret i8* %22
}

declare dso_local i8* @fz_xml_text(i32) #1

declare dso_local i32 @fz_xml_down(i32) #1

declare dso_local i32 @fz_xml_find_down(i32*, i8*) #1

declare dso_local i8* @fz_strdup(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
